--- a/src/components/layout/header/index.module.css
+++ b/src/components/layout/header/index.module.css
@@ -1,7 +1,7 @@
 .header {
-	padding: var(--spacingMedium);
+	padding: var(--spacing-medium);
 
 	& > nav > a {
-		color: var(--colorGreen);
+		color: var(--colour-green);
 	}
 }
