--- a/src/pages/home/index.module.css
+++ b/src/pages/home/index.module.css
@@ -1,4 +1,4 @@
 .home {
-	border: 2px solid var(--colorBlack);
-	padding: var(--spacingMedium);
+	border: 2px solid var(--colour-black);
+	padding: var(--spacing-medium);
 }
