--- a/src/pages/test/index.module.css
+++ b/src/pages/test/index.module.css
@@ -1,4 +1,4 @@
 .test {
-	border: 2px solid var(--colorGreen);
-	padding: var(--spacingMedium);
+	border: 2px solid var(--colour-green);
+	padding: var(--spacing-medium);
 }
