--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,28 +1,29 @@
 :root {
 	/* colors */
-	--colorBlack: #000;
-	--colorWhite: #fff;
-	--colorGreen: #228844;
+	--colour-black: #000;
+	--colorur-white: #fff;
+	--colour-green: #284;
 
 	/* fonts */
-	--fontFamilyBase: Helvetica, arial, sans-serif;
-	--fontFamilyHeading: Georgia, serif;
-	--fontSizeRegular: 1.2rem;
-	--fontSizeLarge: 2rem;
+	--font-family-base: helvetica, arial, sans-serif;
+	--font-family-heading: georgia, serif;
+	--font-size-regular: 1.2rem;
+	--font-size-large: 2rem;
 
 	/* spacing */
-	--spacingMedium: 2rem;
+	--spacing-medium: 2rem;
 
 	/* shadows */
-	--shadowLarge: 0 2px 30px 0 rgba(var(--colorBlack), 0.15);
+	--shadow-large: 0 2px 30px 0 rgb(var(--colour-black) 0.15);
 }
 
 html,
 body {
-	padding: 0;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+		Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+		sans-serif;
 	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	padding: 0;
 }
 
 a {
