feat: updated Storybook to latest and remaining deps (#352)

--- a/src/components/atoms/button/index.module.css
+++ b/src/components/atoms/button/index.module.css
@@ -23,6 +23,12 @@
 		background-color: var(--colour-white);
 		color: var(--colour-black);
 	}
+
+	&:disabled {
+		background-color: var(--colour-grey);
+		color: var(--colour-black);
+		cursor: default;
+	}
 }
 
 .secondary {
