build(deps): upgraded dependencies and checked stuff works (#529)

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -82,7 +82,9 @@
 	padding: 1.5rem;
 	text-align: left;
 	text-decoration: none;
-	transition: color 0.15s ease, border-color 0.15s ease;
+	transition:
+		color 0.15s ease,
+		border-color 0.15s ease;
 }
 
 .card:hover,
@@ -108,7 +110,7 @@
 	margin-left: 0.5rem;
 }
 
-@media (max-width: 600px) {
+@media (width <= 600px) {
 	.grid {
 		flex-direction: column;
 		width: 100%;
